--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,139 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 html {
-    color: #333;
-    font-size: 62.5%;
-    font-family: "Open Sans", sans-serif;
+	color: #333;
+	font-size: 62.5%;
+	font-family: "Open Sans", sans-serif;
 }
 
 .main {
-    background: #f1f1f1;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
+	background: #f1f1f1;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
 }
 
 .btn {
-    width: 50%;
-    padding: 16px 32px;
-    position: absolute;
-    top: -55px;
-    left: 0;
-    border: none;
-    font-size: 1.8rem;
-    font-weight: 600;
+	width: 50%;
+	padding: 16px 32px;
+	position: absolute;
+	top: -55px;
+	left: 0;
+	border: none;
+	font-size: 1.8rem;
+	font-weight: 600;
+	cursor: pointer;
 }
 
 .btn.active {
-    background-color: #fff;
-    color:#1ac7b6;
-    border-bottom: #1ac7b6 2px solid;
+	background-color: #fff;
+	color: #1ac7b6;
+	border-bottom: #1ac7b6 2px solid;
+	transition: all 0.2s ease-in;
 }
 
 .btn.login-btn {
-    left: 50%;
+	left: 50%;
 }
 
 .form {
-    width: 360px;
-    min-height: 100px;
-    padding: 32px 24px;
-    text-align: center;
-    background: #fff;
-    border-radius: 2px;
-    margin: 24px;
-    align-self: center;
-    box-shadow: 0 2px 5px 0 rgba(51, 62, 73, 0.1);
-    position: relative;
+	width: 360px;
+	min-height: 100px;
+	padding: 32px 24px;
+	text-align: center;
+	background: #fff;
+	border-radius: 2px;
+	margin: 24px;
+	align-self: center;
+	box-shadow: 0 2px 5px 0 rgba(51, 62, 73, 0.1);
+	position: relative;
 }
 
 .form .heading {
-    font-size: 2rem;
+	font-size: 2rem;
 }
 
 .form .desc {
-    text-align: center;
-    color: #636d77;
-    font-size: 1.6rem;
-    font-weight: lighter;
-    line-height: 2.4rem;
-    margin-top: 16px;
-    font-weight: 300;
+	text-align: center;
+	color: #636d77;
+	font-size: 1.6rem;
+	font-weight: lighter;
+	line-height: 2.4rem;
+	margin-top: 16px;
+	font-weight: 300;
 }
 
 .login {
-    display: none;
+	display: none;
 }
 
 .form-group {
-    display: flex;
-    margin-bottom: 16px;
-    flex-direction: column;
+	display: flex;
+	margin-bottom: 16px;
+	flex-direction: column;
 }
 
 .form-label,
 .form-message {
-    text-align: left;
+	text-align: left;
 }
 
 .form-label {
-    font-weight: 700;
-    padding-bottom: 6px;
-    line-height: 1.8rem;
-    font-size: 1.4rem;
+	font-weight: 700;
+	padding-bottom: 6px;
+	line-height: 1.8rem;
+	font-size: 1.4rem;
 }
 
 .form-control {
-    height: 40px;
-    padding: 8px 12px;
-    border: 1px solid #b3b3b3;
-    border-radius: 3px;
-    outline: none;
-    font-size: 1.4rem;
+	height: 40px;
+	padding: 8px 12px;
+	border: 1px solid #b3b3b3;
+	border-radius: 3px;
+	outline: none;
+	font-size: 1.4rem;
 }
 
 .form-control:hover {
-    border-color: #1dbfaf;
+	border-color: #1dbfaf;
 }
 
 .form-group.invalid .form-control {
-    border-color: #f33a58;
+	border-color: #f33a58;
 }
 
 .form-group.invalid .form-message {
-    color: #f33a58;
+	color: #f33a58;
 }
 
 .form-message {
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    padding: 4px 0 0;
+	font-size: 1.2rem;
+	line-height: 1.6rem;
+	padding: 4px 0 0;
 }
 
 .form-submit {
-    outline: none;
-    background-color: #1dbfaf;
-    margin-top: 12px;
-    padding: 12px 16px;
-    font-weight: 600;
-    color: #fff;
-    border: none;
-    width: 100%;
-    font-size: 14px;
-    border-radius: 8px;
-    cursor: pointer;
+	outline: none;
+	background-color: #1dbfaf;
+	margin-top: 12px;
+	padding: 12px 16px;
+	font-weight: 600;
+	color: #fff;
+	border: none;
+	width: 100%;
+	font-size: 14px;
+	border-radius: 8px;
+	cursor: pointer;
 }
 
 .form-submit:hover {
-    background-color: #1ac7b6;
+	background-color: #1ac7b6;
 }
 
 .spacer {
-    margin-top: 36px;
+	margin-top: 36px;
 }
